--- a/7days-node/.vscode/launch.json
+++ b/7days-node/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "启动",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/main.js",
+            "program": "${workspaceRoot}/daemon.js",
             "stopOnEntry": false,
             "args": ["config.json"],
             "cwd": "${workspaceRoot}",
